Contact flow done. Issue with overlapping keyboard not in scope

--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -73,6 +73,11 @@
           grid-column: 2;
         }
 
+        &__thank-you {
+          grid-column: 2;
+          justify-self: center;
+        }
+
       p {
         padding: 0;
 
